# tests-lapacke

./: FindLAPACKE.cmake
.github/workflows/: find-lapacke.yaml  findlapacke.yaml
tests/: CMakeLists.txt  test_lapacke.cpp
